[package]
name = "unurl"
version = "0.1.0"
authors = ["Eric McIntyre <mac@riversoforion.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"

[[bin]]
name = "unurl-app"
path = "src/app.rs"

[[bin]]
name = "unurl-resolver"
path = "src/resolver.rs"
